# Sensors

./: .gitignore  README.md  fk_viewer.py  send_target.py
mainarmass/: CMakeLists.txt
mainarmass/launch/: mainarmass.launch
mainarmass_moveit_config/mainarmass/: package.xml
mainarmass_moveit_config/mainarmass/urdf/: mainarmass.urdf  mainarmass_fixed.urdf
mainarmass_moveit_config/mainarmass_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mainarmass_moveit_config/mainarmass_moveit_config/config/: joint_limits.yaml  mainarmass.srdf  mainarmass.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
mainarmass_moveit_config/mainarmass_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
tabletennistrainer_ws/: build.sh  compile_commands.json  ros2_env.sh  run_moveit_demo.sh  sync_and_build.sh  ttt_demo.rviz
tabletennistrainer_ws/log/: latest_build
tabletennistrainer_ws/src/gui/: marty_gui.py
tabletennistrainer_ws/src/ttt_bringup/: CMakeLists.txt  package.xml
tabletennistrainer_ws/src/ttt_bringup/launch/: calibrate_table.launch.py  calibration.py  camera_left.launch.py  camera_right.launch.py  full_system_launch.py  jetsonA.launch.py  jetsonB.launch.py
tabletennistrainer_ws/src/ttt_bringup/scripts/: Dockerfile.rviz  diag_tool.py  ik_debug.py  marty_gui.py  run_rviz.py
tabletennistrainer_ws/src/ttt_calibration/: CMakeLists.txt  package.xml
tabletennistrainer_ws/src/ttt_calibration/config/: stereo_extrinsic.yaml
tabletennistrainer_ws/src/ttt_calibration/launch/: calibration_launch.py
tabletennistrainer_ws/src/ttt_camera/: CMakeLists.txt  package.xml
tabletennistrainer_ws/src/ttt_camera/src/: camera_node.cpp
tabletennistrainer_ws/src/ttt_control/: CMakeLists.txt  package.xml
tabletennistrainer_ws/src/ttt_control/config/: control_kinematics_params.yaml  initial_positions.yaml  kinematics.yaml  mainarmass.srdf  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  trajectory_execution.yaml
tabletennistrainer_ws/src/ttt_control/launch/: controllers.launch.py  move_group.launch.py
tabletennistrainer_ws/src/ttt_control/src/: control_node.cpp
tabletennistrainer_ws/src/ttt_control/urdf/: mainarmass_fixed.urdf
tabletennistrainer_ws/src/ttt_hardware/: CMakeLists.txt  package.xml
tabletennistrainer_ws/src/ttt_hardware/src/: hardware_node.cpp
tabletennistrainer_ws/src/ttt_msgs/: CMakeLists.txt  package.xml
tabletennistrainer_ws/src/ttt_msgs/msg/: BallDetection.msg  BallTrack.msg
tabletennistrainer_ws/src/ttt_stereo/: CMakeLists.txt  package.xml
tabletennistrainer_ws/src/ttt_stereo/src/: stereo_node.cpp
tabletennistrainer_ws/src/ttt_trajectory/: CMakeLists.txt  package.xml
tabletennistrainer_ws/src/ttt_trajectory/src/: control_kinematics_params.yaml  kinematics.yaml  trajectory_node.cpp
tabletennistrainer_ws/src/ttt_vision/: CMakeLists.txt  package.xml
tabletennistrainer_ws/src/ttt_vision/include/ttt_vision/: ball_detector.hpp
tabletennistrainer_ws/src/ttt_vision/src/: ball_detector_node.cpp  vision_node.cpp  vision_node.cpp.tmp.41981.1774904204490
