<?xml version="1.0"?>
<package format="3">
  <name>mainarmass</name>
  <version>1.0.0</version>
  <description>UGA Capstone Ping Pong Arm</description>
  <maintainer email="ben@uga.edu">Ben</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>